--- a/index.html
+++ b/index.html
@@ -134,10 +134,206 @@ function videoEnded(id){
 }
 
 function escapeHtml(s){ 
+<!doctype html>
+<html lang="ar">
+<head>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>موقع فيديوهات المستخدم - Dark Web Maze</title>
+<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
+<style>
+  :root { --bg1:#06070b; --bg2:#071227; --accent:#00e6a8; }
+  *{box-sizing:border-box;font-family: 'Orbitron', sans-serif;}
+  body{margin:0; min-height:100vh; background:linear-gradient(180deg,var(--bg1),#041226); color:#dfefff; overflow-x:hidden;}
+  
+  /* الهيدر ثابت */
+  header{
+    position:fixed;
+    top:0; left:0; right:0;
+    padding:18px 24px;
+    display:flex; align-items:center; gap:12px;
+    background:rgba(0,0,0,0.85);
+    backdrop-filter:blur(8px);
+    z-index:1000;
+  }
+  .brand{font-size:18px;color:var(--accent); font-weight:700;}
+  .darkbox{margin-left:auto; background:rgba(0,0,0,0.5); padding:10px 14px; border-radius:8px; font-weight:700; color:#fff; font-size:14px;}
+
+  .container{padding:120px 18px 80px; max-width:1200px; margin:0 auto;}
+  .grid{display:grid; grid-template-columns: repeat(auto-fill, minmax(260px,1fr)); gap:16px;}
+  .card{background:linear-gradient(180deg, rgba(255,255,255,0.02), transparent); border-radius:12px; overflow:hidden; border:1px solid rgba(255,255,255,0.03); box-shadow: 0 6px 18px rgba(0,0,0,0.5);}
+  .thumb-container{position:relative;width:100%;height:160px;background:#041227;overflow:hidden;}
+  .thumb{width:100%; height:100%; object-fit:cover; display:block;}
+  .play-icon{
+    position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);
+    background:rgba(0,0,0,0.6);border:2px solid var(--accent);color:var(--accent);
+    width:48px;height:48px;border-radius:50%;display:flex;align-items:center;justify-content:center;
+    font-size:20px;cursor:pointer;transition:0.3s;
+  }
+  .play-icon:hover{transform:translate(-50%,-50%) scale(1.1);}
+  video{width:100%;height:160px;display:block;border:none;outline:none;}
+  .card-body{padding:12px;}
+  .title{font-size:14px; font-weight:700; margin-bottom:8px;}
+  .controls{display:flex; gap:8px; align-items:center;}
+  .btn{padding:8px 10px;border-radius:8px;border:none; cursor:pointer; font-weight:700;}
+  .buy{background:var(--accent); color:#002; flex:1;}
+  .empty{padding:40px;text-align:center;color:#9fb7ff}
+  .hero{
+    background: linear-gradient(90deg, rgba(0,0,0,0.45), transparent);
+    padding:18px; border-radius:10px; margin-bottom:14px; color:#cfe8ff;
+    display:flex; align-items:center; gap:12px;
+  }
+  .hero h1{margin:0;font-size:20px;}
+  .hero p{margin:0;color:#9fb7ff;font-size:13px}
+
+  /* أيقونة الملف الشخصي */
+  .profile-btn{
+    position:fixed;
+    bottom:22px; right:22px;
+    background:var(--accent);
+    color:#001;
+    width:58px; height:58px;
+    border-radius:50%;
+    display:flex; align-items:center; justify-content:center;
+    font-size:26px;
+    box-shadow:0 0 20px rgba(0,230,168,0.4);
+    cursor:pointer;
+    z-index:999;
+  }
+
+  /* نافذة الملف الشخصي */
+  #profileModal{
+    position:fixed;
+    top:0;left:0;right:0;bottom:0;
+    background:rgba(0,0,0,0.92);
+    backdrop-filter:blur(10px);
+    display:none;
+    flex-direction:column;
+    align-items:center;
+    padding:100px 20px;
+    overflow-y:auto;
+    z-index:2000;
+  }
+  .profile-card{
+    text-align:center;
+    color:#eaffff;
+  }
+  .profile-pic{
+    width:120px; height:120px;
+    border-radius:50%;
+    object-fit:cover;
+    border:2px solid var(--accent);
+  }
+  .uid{margin:10px 0;color:var(--accent);font-size:14px;}
+  .devs{margin-top:30px;width:100%;max-width:500px;}
+  .dev{display:flex;align-items:center;gap:12px;background:rgba(255,255,255,0.05);padding:10px;border-radius:10px;margin-bottom:10px;}
+  .dev img{width:50px;height:50px;border-radius:50%;object-fit:cover;}
+  .stars{color:gold;font-size:14px;}
+  .close-btn{
+    position:absolute;top:20px;right:20px;
+    background:none;border:none;color:#fff;font-size:26px;cursor:pointer;
+  }
+</style>
+</head>
+<body>
+  <header>
+    <div class="brand">Dark Web Maze</div>
+    <div class="darkbox">𝐃𝐚𝐫𝐤 𝗪𝗲𝗯 𝐌𝐚𝐳𝐞 𝗼𝗳 𝐃𝐚𝐫𝐤𝐧𝐞𝘀𝐬</div>
+  </header>
+
+  <div class="container">
+    <div class="hero">
+      <div>
+        <h1>أحدث الفيديوهات المنشورة</h1>
+        <p>𝐃𝐚𝐫𝐤 𝗪𝗲𝗯 𝐌𝐚𝐳𝐞 𝗼𝗳 𝐃𝐚𝐫𝐤𝐧𝐞𝐬𝐬</p>
+      </div>
+    </div>
+
+    <div id="videosGrid" class="grid"></div>
+    <div id="empty" class="empty" style="display:none">لا توجد فيديوهات حتى الآن</div>
+  </div>
+
+  <!-- زر الملف الشخصي -->
+  <div class="profile-btn" onclick="openProfile()">👤</div>
+
+  <!-- نافذة الملف الشخصي -->
+  <div id="profileModal">
+    <button class="close-btn" onclick="closeProfile()">×</button>
+    <div class="profile-card">
+      <img src="https://img.freepik.com/free-photo/dark-background-hacked-compromised-system-3d-illustration_1419-2810.jpg" class="profile-pic" alt="Hacker Profile">
+      <div class="uid" id="deviceId"></div>
+      <div class="devs" id="devsList"></div>
+    </div>
+  </div>
+
+<!-- Firebase -->
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
+
+<script>
+/* إعداد Firebase */
+const firebaseUserConfig = {
+  apiKey: "AIzaSyDsTkCfbUJK3bnV4GI0caSHE8XOTggnnYI",
+  authDomain: "alio-6eb47.firebaseapp.com",
+  databaseURL: "https://alio-6eb47-default-rtdb.firebaseio.com",
+  projectId: "alio-6eb47",
+  storageBucket: "alio-6eb47.appspot.com",
+  messagingSenderId: "584481268869",
+  appId: "1:584481268869:android:b3543e690574bc8410b5ec"
+};
+const userApp = firebase.initializeApp(firebaseUserConfig, "userApp");
+const db = userApp.database();
+
+/* إظهار الفيديوهات */
+const grid = document.getElementById('videosGrid');
+const empty = document.getElementById('empty');
+let currentPlaying = null;
+
+function renderVideoCard(v){
+  const div = document.createElement('div'); 
+  div.className = 'card';
+  const thumb = v.thumbURL || 'https://via.placeholder.com/640x360?text=No+Thumbnail';
+  const safeTitle = escapeHtml(v.title || 'بدون عنوان');
+  const videoId = 'vid_' + Math.random().toString(36).substring(2,9);
+  
+  div.innerHTML = `
+    <div class="thumb-container" id="thumbContainer_${videoId}">
+      <img src="${thumb}" class="thumb" alt="${safeTitle}">
+      <div class="play-icon" id="playIcon_${videoId}" onclick="playVideo('${videoId}', '${v.videoURL.replace(/'/g,"\\'")}')">▶</div>
+    </div>
+    <div class="card-body">
+      <div class="title">${safeTitle}</div>
+      <div style="font-size:12px;color:#9fb7ff;margin-bottom:8px">${new Date(v.publishedAt||0).toLocaleString()}</div>
+      <div class="controls">
+        <button class="btn buy" onclick="buyCourse('${v.id||''}')">شراء الكورس</button>
+      </div>
+    </div>`;
+  grid.appendChild(div);
+}
+
+function playVideo(id, url){
+  if (currentPlaying && currentPlaying !== id) {
+    const oldContainer = document.getElementById(`thumbContainer_${currentPlaying}`);
+    if (oldContainer) oldContainer.innerHTML = oldContainer.innerHTML; // reset
+  }
+  const container = document.getElementById(`thumbContainer_${id}`);
+  if (!container) return;
+  container.innerHTML = `<video controls autoplay src="${url}" onended="videoEnded('${id}')"></video>`;
+  currentPlaying = id;
+}
+
+function videoEnded(id){
+  const container = document.getElementById(`thumbContainer_${id}`);
+  if (!container) return;
+  container.innerHTML = `<div class="play-icon" onclick="playVideo('${id}', '${container.querySelector('video')?.src || ''}')">▶</div>`;
+  currentPlaying = null;
+}
+
+function escapeHtml(s){ 
   return String(s).replace(/&/g,'&amp;').replace(/</g,'&lt;').replace(/>/g,'&gt;'); 
 }
 
-// ✅ هنا تم الإضافة: دالة الشراء تفتح Activity في التطبيق
+/* ربط الزر بفتح صفحة التطبيق */
 function buyCourse(id){
   if (typeof Android !== "undefined" && Android.openGggActivity) {
     Android.openGggActivity();
@@ -160,8 +356,41 @@ function loadVideosRealtime(){
     }
   });
 }
-
 loadVideosRealtime();
+
+/* الملف الشخصي */
+function getUniqueId(){
+  let uid = localStorage.getItem('device_uid');
+  if(!uid){
+    uid = 'UID-' + Math.random().toString(36).substring(2,10).toUpperCase();
+    localStorage.setItem('device_uid', uid);
+  }
+  return uid;
+}
+
+function openProfile(){
+  document.getElementById('profileModal').style.display='flex';
+  document.getElementById('deviceId').innerText = getUniqueId();
+  const devs = [
+    {name:'CyberWolf', img:'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT_1CQWnkaCQf1oc0uiutDxs1J6Sl4yYTkd0VPME_gTFkpnGw2LVY7XeYs&s', stars:5},
+    {name:'NeoByte', img:'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRYXEglUT0QfIkJhawqsKY0NnNNqhQGpmDDarKDguYnXA&s=10', stars:4},
+    {name:'GhostCoder', img:'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSn464FoeedZRj_M0VRk0lZUSV10MDmBBc0BbtTgTpGdQ&s=10', stars:3},
+    {name:'AnonRoot', img:'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRyMDGQMDS4SXphtFEZY50icL5tRotlupvBphiyR6uVag&s=10', stars:5},
+    {name:'ZeroHack', img:'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQlLdi3Bzhgh7tUznsWYCmF-4I3ugAf6BKSoAT6P78jZg&s=10', stars:4}
+  ];
+  const devsList = document.getElementById('devsList');
+  devsList.innerHTML = '';
+  devs.forEach(d=>{
+    const div = document.createElement('div');
+    div.className='dev';
+    div.innerHTML = `<img src="${d.img}"><div><div>${d.name}</div><div class="stars">${'★'.repeat(d.stars)}${'☆'.repeat(5-d.stars)}</div></div>`;
+    devsList.appendChild(div);
+  });
+}
+
+function closeProfile(){
+  document.getElementById('profileModal').style.display='none';
+}
 </script>
 </body>
 </html>
