--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   *{box-sizing:border-box;font-family: 'Orbitron', sans-serif;}
   body{margin:0; min-height:100vh; background:linear-gradient(180deg,var(--bg1),#041226); color:#dfefff; overflow-x:hidden;}
   
-  /* الهيدر ثابت */
   header{
     position:fixed;
     top:0; left:0; right:0;
@@ -50,7 +49,6 @@
   .hero h1{margin:0;font-size:20px;}
   .hero p{margin:0;color:#9fb7ff;font-size:13px}
 
-  /* أيقونة الملف الشخصي */
   .profile-btn{
     position:fixed;
     bottom:22px; right:22px;
@@ -65,7 +63,6 @@
     z-index:999;
   }
 
-  /* نافذة الملف الشخصي */
   #profileModal{
     position:fixed;
     top:0;left:0;right:0;bottom:0;
@@ -109,7 +106,7 @@
     <div class="hero">
       <div>
         <h1>أحدث الفيديوهات المنشورة</h1>
-        <p>𝐃𝐚𝐫𝐤 𝗪𝗲𝗯 𝐌𝐚𝐳𝐞 𝗼𝗳 𝐃𝐚𝐫𝐤𝐧𝐞𝐬𝐬</p>
+        <p>𝐃𝐚𝐫𝐤 𝗪𝗲𝗯 𝐌𝐚𝐳𝐞 𝗼𝗳 𝐃𝐚𝐫𝐤𝐧𝐞𝘀𝐬</p>
       </div>
     </div>
 
@@ -117,10 +114,8 @@
     <div id="empty" class="empty" style="display:none">لا توجد فيديوهات حتى الآن</div>
   </div>
 
-  <!-- زر الملف الشخصي -->
   <div class="profile-btn" onclick="openProfile()">👤</div>
 
-  <!-- نافذة الملف الشخصي -->
   <div id="profileModal">
     <button class="close-btn" onclick="closeProfile()">×</button>
     <div class="profile-card">
@@ -130,12 +125,10 @@
     </div>
   </div>
 
-<!-- Firebase -->
 <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
 
 <script>
-/* إعداد Firebase */
 const firebaseUserConfig = {
   apiKey: "AIzaSyDsTkCfbUJK3bnV4GI0caSHE8XOTggnnYI",
   authDomain: "alio-6eb47.firebaseapp.com",
@@ -148,7 +141,6 @@ const firebaseUserConfig = {
 const userApp = firebase.initializeApp(firebaseUserConfig, "userApp");
 const db = userApp.database();
 
-/* إظهار الفيديوهات */
 const grid = document.getElementById('videosGrid');
 const empty = document.getElementById('empty');
 let currentPlaying = null;
@@ -176,12 +168,21 @@ function renderVideoCard(v){
 }
 
 function playVideo(id, url){
+  // ✅ إيقاف الفيديو القديم إذا كان شغال
   if (currentPlaying && currentPlaying !== id) {
     const oldContainer = document.getElementById(`thumbContainer_${currentPlaying}`);
-    if (oldContainer) oldContainer.innerHTML = oldContainer.innerHTML; // reset
+    if (oldContainer) {
+      const oldVideo = oldContainer.querySelector('video');
+      if (oldVideo) oldVideo.pause();
+      const oldThumb = oldContainer.getAttribute('data-thumb') || '';
+      oldContainer.innerHTML = `<img src="${oldThumb}" class="thumb" alt=""><div class="play-icon" onclick="playVideo('${currentPlaying}', '${oldVideo?.src || ''}')">▶</div>`;
+    }
   }
+
   const container = document.getElementById(`thumbContainer_${id}`);
   if (!container) return;
+  const thumb = container.querySelector('.thumb')?.src || '';
+  container.setAttribute('data-thumb', thumb);
   container.innerHTML = `<video controls autoplay src="${url}" onended="videoEnded('${id}')"></video>`;
   currentPlaying = id;
 }
@@ -189,7 +190,8 @@ function playVideo(id, url){
 function videoEnded(id){
   const container = document.getElementById(`thumbContainer_${id}`);
   if (!container) return;
-  container.innerHTML = `<div class="play-icon" onclick="playVideo('${id}', '${container.querySelector('video')?.src || ''}')">▶</div>`;
+  const thumb = container.getAttribute('data-thumb');
+  container.innerHTML = `<img src="${thumb}" class="thumb" alt=""><div class="play-icon" onclick="playVideo('${id}', '${container.querySelector('video')?.src || ''}')">▶</div>`;
   currentPlaying = null;
 }
 
@@ -197,7 +199,6 @@ function escapeHtml(s){
   return String(s).replace(/&/g,'&amp;').replace(/</g,'&lt;').replace(/>/g,'&gt;'); 
 }
 
-/* ربط الزر بفتح صفحة التطبيق */
 function buyCourse(id){
   if (typeof Android !== "undefined" && Android.openGggActivity) {
     Android.openGggActivity();
@@ -222,7 +223,6 @@ function loadVideosRealtime(){
 }
 loadVideosRealtime();
 
-/* الملف الشخصي */
 function getUniqueId(){
   let uid = localStorage.getItem('device_uid');
   if(!uid){
