--- a/index.html
+++ b/index.html
@@ -11,6 +11,22 @@
   body{margin:0; min-height:100vh; background:linear-gradient(180deg,var(--bg1),#041226); color:#dfefff; overflow-x:hidden;}
   
   header{
+
+  .thumb-container {
+  position: relative;
+  width: 100%;
+  aspect-ratio: 16/9;  /* نفس نسبة يوتيوب */
+  background: #041227;
+  overflow: hidden;
+}
+.thumb, video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+  border: none;
+  outline: none;
+    }  
     position:fixed;
     top:0; left:0; right:0;
     padding:18px 24px;
