--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 <body>
 
 <div id="maintenancePage">
-  <h1>🚧 الموقع تحت الصيانة</h1>
+  <h1>🚧 التطبيق تحت الصيانة</h1>
   <p>سيتم العودة قريبًا... يرجى المحاولة لاحقًا</p>
 </div>
 
