Update title and branding to ProCoders Academy

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>موقع فيديوهات المستخدم - Dark Web Maze</title>
+<title>موقع فيديوهات المستخدم - ProCoders Academy</title>
 <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
 <style>
   :root { --bg1:#06070b; --bg2:#071227; --accent:#00e6a8; }
@@ -104,15 +104,15 @@
 
 <div id="mainContent" style="display:none;">
   <header>
-    <div class="brand">Dark Web Maze</div>
-    <div class="darkbox">𝐃𝐚𝐫𝐤 𝗪𝗲𝗯 𝐌𝐚𝐳𝐞 𝗼𝗳 𝐃𝐚𝐫𝐤𝐧𝐞𝐬𝐬</div>
+    <div class="brand">ProCoders Academy</div>
+    <div class="darkbox">ProCoders Academy</div>
   </header>
 
   <div class="container">
     <div class="hero">
       <div>
         <h1>أحدث الفيديوهات المنشورة</h1>
-        <p>𝐃𝐚𝐫𝐤 𝗪𝗲𝗯 𝐌𝐚𝐳𝐞 𝗼𝗳 𝐃𝐚𝐫𝐤𝐧𝐞𝐬𝐬</p>
+        <p>ProCoders Academy</p>
       </div>
     </div>
 
