--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>موقع فيديوهات المستخدم - ProCoders Academy</title>
 <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
 <style>
-  :root { --bg1:#06070b; --bg2:#071227; --accent:#00e6a8; }
+  :root { --bg1:#0a0a0a; --bg2:#200000; --accent:#e50914; }
   *{box-sizing:border-box;font-family:'Orbitron',sans-serif;}
   body{margin:0;min-height:100vh;background:linear-gradient(180deg,var(--bg1),#041226);color:#dfefff;overflow-x:hidden;}
   header{position:fixed;top:0;left:0;right:0;padding:18px 24px;display:flex;align-items:center;gap:12px;background:rgba(0,0,0,0.85);backdrop-filter:blur(8px);z-index:1000;}
